<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/v1_menu_db_manager" android:title="@string/v1_menu_db_manager" android:icon="@drawable/v1_menu_db_manager_30x30"></item>
    <item android:id="@+id/v1_menu_add_item" android:title="@string/v1_menu_register_item" android:icon="@android:drawable/ic_input_add"></item>
    <item android:id="@+id/v1_menu_item_list" android:title="@string/v1_menu_item_list" android:icon="@drawable/v1_menu_item_list_30x30"></item>
    <item android:id="@+id/v1_menu_register_store" android:icon="@drawable/v1_menu_item_register_store_2_30x30" android:title="@string/v1_menu_register_shop"></item>
    <item android:id="@+id/v1_menu_add_genre" android:icon="@drawable/v1_menu_add_genre_30x30"   android:title="@string/v1_menu_add_genre"></item>
    

</menu>