<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/v1_tl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_gravity="center_horizontal">
        
		<TableRow >
	        <TextView
	            android:id="@+id/v1_tv_store"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/v1_tv_store"
	            android:textSize="25dp" 
	            />
	
	        <Spinner
	            android:id="@+id/v1_sp_store"
	            
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            
	            android:textSize="25dp"
	            
	            android:layout_weight="1" 
	            />
		</TableRow>

		<TableRow >
			<TextView
	            android:id="@+id/v1_tv_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/v1_tv_item"
	            android:textSize="25dp" />
	
	        <EditText
	            android:id="@+id/v1_et_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:minWidth="200dp"
	            android:textSize="25dp" />
		</TableRow>

		<TableRow >	
	        <TextView
	            android:id="@+id/v1_tv_yomi"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/v1_tv_yomi"
	            android:textSize="25dp" />
	
	        <EditText
	            android:id="@+id/v1_et_yomi"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:minWidth="200dp"
	            android:textSize="25dp" />
	    </TableRow>

	    <TableRow >	
	        <TextView
	            android:id="@+id/v1_tv_price"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/v1_tv_price"
	            android:textSize="25dp" />
	
	        <EditText
	            android:id="@+id/v1_et_price"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:minWidth="200dp"
	            android:textSize="25dp" />
	    </TableRow>

	    <TableRow >	
	        <TextView
	            android:id="@+id/v1_tv_genre"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/v1_tv_genre"
	            android:textSize="25dp" />
	
			<Spinner
	            android:id="@+id/v1_sp_genre"
	            
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            
	            android:textSize="25dp"
	            
	            android:layout_weight="1" 
	            />
	
	    </TableRow>
    </TableLayout>
    
    <Button
        android:id="@+id/v1_btn_register"
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_gravity="center_horizontal"
        
        android:text="@string/v1_btn_register" android:textSize="25dp"
        
        />    
</LinearLayout>