<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    
    
    android:gravity="center_vertical"
    
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_gravity="center_horizontal|center_vertical"
         >

        <TextView
            android:id="@+id/sl_tv_item_list"
            
            style="@style/sl_tv"
            
            android:text="@string/sl_tv_item_list" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        
        android:layout_gravity="center_horizontal|center_vertical"
        
        >

        <TextView
            android:id="@+id/sl_tv_register"
            
            style="@style/sl_tv"
            
            android:text="@string/sl_tv_item_register" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        
        android:layout_gravity="center_horizontal|center_vertical"
        
        >

        <TextView
            android:id="@+id/sl_tv_db"
            
            style="@style/sl_tv"
            
            android:text="@string/sl_tv_item_db" />

    </LinearLayout>

</LinearLayout>