<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        	<!-- 70dp => 25dp character x 2 => 1 char, 40dp -->
        <TextView
            android:id="@+id/dlg_filter_list_tv_store"
            
            
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            
            android:gravity="center_vertical|center_horizontal"
            
            android:text="@string/dlg_filter_list_tv_store" 
            android:textSize="25dp"
            android:textColor="@color/white"
            
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            
            />

        <Spinner
            android:id="@+id/dlg_filter_list_sp_store"
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:layout_weight="1" 
            
            android:layout_marginRight="10dp"
            
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/dlg_filter_list_tv_genre"
            
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            
            android:text="@string/dlg_filter_list_tv_genre" 
            android:textSize="25dp"
            android:textColor="@color/white"
            
            android:gravity="center_vertical|center_horizontal"
            
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            
            />

        <Spinner
            android:id="@+id/dlg_filter_list_sp_genre"
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            
            android:layout_marginRight="10dp"
            
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/dlg_filter_list_tv_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:text="@string/dlg_filter_list_tv_history" 
            android:textSize="25dp"
            android:textColor="@color/white"
            
            android:gravity="center_vertical|center_horizontal"
            
            android:layout_weight="1"
            
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/dlg_filter_list_bt_ok"

            android:layout_width="180dp"
            android:layout_height="wrap_content"

			android:layout_weight="1"
			
            android:text="@string/generic_ok" 
            android:textSize="25dp"
            android:textColor="@color/blue1"
            android:background="@color/white"
            
            android:gravity="center_vertical|center_horizontal"
            
            android:layout_marginLeft="20dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            
            />

        <Button
            android:id="@+id/dlg_filter_list_bt_cancel"
            
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            
            android:layout_weight="1"
			
            android:text="@string/generic_cancel" 
            android:textSize="25dp"
            android:textColor="@color/red"
            android:background="@color/white"
            
            android:gravity="center_vertical|center_horizontal"
            
            android:layout_marginLeft="6dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            
            />

    </LinearLayout>

</LinearLayout>