<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:id="@+id/dlg_reconfirm_genre_name_LL_root"
    >

    <LinearLayout
        android:id="@+id/dlg_reconfirm_genre_name_LL_message_genre_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/dlg_reconfirm_genre_name_tv_message_genre_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="5dp"
            
            android:text="@string/dlg_reconfirm_genre_name"
            android:textSize="25dp" 
            
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dlg_reconfirm_genre_name_LL_genre_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/dlg_reconfirm_genre_name_tv_genre_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:paddingBottom="5dp"

            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 

        android:id="@+id/dlg_reconfirm_genre_name_LL_message_reconfirm"
        >

        <TextView
            android:id="@+id/dlg_reconfirm_genre_name_tv_message_reconfirm"
            
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:textSize="25dp"
            android:text="@string/generic_message_register"
            
            android:paddingBottom="5dp"
            
            android:gravity="center"
            
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        
         
        android:id="@+id/dlg_reconfirm_genre_name_LL_buttons"
        >

        <Button
            android:id="@+id/dlg_reconfirm_genre_name_btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            
            android:minWidth="160dp"
            
            android:textSize="22dp"
            android:text="@string/generic_register"
            android:textColor="@color/blue1"
            
            android:layout_weight="1"
            
            android:layout_marginLeft="5dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="5dp"
            
            android:background="@color/white"
            
            />

        <Button
            android:id="@+id/dlg_reconfirm_genre_name_btn_cancel"
            
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            
            android:minWidth="160dp"
            
            android:textSize="25dp"
            android:text="@string/generic_cancel"
            android:textColor="@color/red"
            
            android:layout_weight="1"
            
            android:layout_marginLeft="2dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            
            android:background="@color/white"
            
            />

    </LinearLayout>

</LinearLayout>