<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:id="@+id/dlg_register_store_LL_root"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:id="@+id/dlg_register_store_LL_message"
        >

        <TextView
            android:id="@+id/dlg_register_store_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:text="@string/dlg_register_store_message"
            android:textSize="25dp"
            
            android:paddingLeft="15dp"
            android:paddingBottom="5dp"
            
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:id="@+id/dlg_register_store_LL_edit"
        >

        <EditText
            android:id="@+id/dlg_register_store_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            
            android:textSize="25dp"
            
            android:ems="10" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        
         
        android:id="@+id/dlg_register_store_LL_buttons"
        >

        <Button
            android:id="@+id/dlg_register_store_btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:minWidth="160dp"
            
            android:textSize="25dp"
            android:text="@string/dlg_register_store_ok"
            
            android:layout_weight="1"
            
            />

        <Button
            android:id="@+id/dlg_register_store_btn_cancel"
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:minWidth="160dp"
            
            android:textSize="25dp"
            android:text="@string/dlg_register_store_cancel"
            
            android:layout_weight="1"
            
            />

    </LinearLayout>

</LinearLayout>