<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:id="@+id/dlg_register_genre_LL_root"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:id="@+id/dlg_register_genre_LL_message"
        >

        <TextView
            android:id="@+id/dlg_register_genre_tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:text="@string/dlg_register_genre_message"
            android:textSize="25dp"
            
            android:paddingLeft="15dp"
            android:paddingBottom="5dp"
            
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:id="@+id/dlg_register_genre_LL_edit"
        >

        <EditText
            android:id="@+id/dlg_register_genre_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            
            android:textSize="25dp"
            
            android:ems="10" 
            
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            
            >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        
         
        android:id="@+id/dlg_register_genre_LL_buttons"
        >

        <Button
            android:id="@+id/dlg_register_genre_btn_register"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            
            android:minWidth="160dp"
            
            android:textSize="25dp"
            android:text="@string/generic_register"
            android:textColor="@color/blue1"
            
            android:layout_weight="1"
            
            android:layout_marginLeft="5dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="5dp"
            
            android:background="@color/white"
            
            />

        <Button
            android:id="@+id/dlg_register_genre_btn_cancel"
            
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            
            android:minWidth="160dp"
            
            android:textSize="25dp"
            android:text="@string/generic_cancel"
            android:textColor="@color/red"
            
            android:layout_weight="1"
            
            android:layout_marginLeft="2dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            
            android:background="@color/white"
            
            />

    </LinearLayout>

</LinearLayout>